save data and generate html for delivery options

--- a/checkout.html
+++ b/checkout.html
@@ -82,7 +82,8 @@
         </div>
       </div>
     </div>
-
+ 
+<!--for using external libraries we should use modules it limits the scope of the variables, avoiding naming conflicts ,to use modules and external lbraries we use EMS VERSION (EcmaScript Module) another name for js works with js modules -->
     <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
