--- a/tracking.html
+++ b/tracking.html
@@ -88,5 +88,11 @@
         </div>
       </div>
     </div>
+
+    <script>
+      const url = new URL(window.location.href);
+      console.log(url.searchParams.get('orderId')); //to get url parameters(search parameters) the thing after ? in any url
+      console.log(url.searchParams.get('productId'));
+    </script>
   </body>
 </html>
